--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
+
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  font-family: 'Roboto', sans-serif;
 }
 
 header .line-up {
@@ -18,7 +25,7 @@ header .line-up {
 }
 
 header .navigation {
-  background: #F0A83E;
+  background: #f0a83e;
   display: flex;
   justify-content: space-between;
   padding: 1.5em 3em;
@@ -37,7 +44,9 @@ header .navigation {
 
 .banner img {
   width: 100%;
-
+  height: 410px;
+  object-fit: cover;
+  object-position: left;
 }
 
 .banner div {
@@ -59,7 +68,7 @@ header .navigation {
 }
 
 .banner button {
-  background: #F0A83E;
+  background: #f0a83e;
   border: none;
   padding: 1.2em;
   border-radius: 0.25em;
@@ -75,8 +84,8 @@ header .navigation {
 }
 
 .featured-headding h2 {
- margin-bottom: 0.5em;
- font-size: 42px;
+  margin-bottom: 0.5em;
+  font-size: 42px;
 }
 
 .featured-headding p {
@@ -89,10 +98,11 @@ header .navigation {
   display: flex;
   gap: 1em;
   justify-content: center;
+  flex-wrap: wrap;
 }
 
 .product-cart-container figure {
-  background: #FBFAF6;
+  background: #fbfaf6;
 }
 
 .product-cart-container figcaption {
@@ -113,11 +123,11 @@ header .navigation {
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 1em
+  gap: 1em;
 }
 
 .contact-form input {
-  background: #3C2313;
+  background: #3c2313;
   width: 340px;
   height: 40px;
   border-radius: 1.2em;
@@ -126,5 +136,70 @@ header .navigation {
 }
 
 .contact-form input::placeholder {
-  color: white
+  color: white;
+}
+
+footer {
+  background: #3c2313;
+}
+
+.subscription {
+  background: #f0a83e;
+  padding: .5em 3em;
+  display: flex;
+  justify-content: space-between;
+}
+
+.subscription-text {
+  display: flex;
+  gap: 1em;
+  align-items: center;
+}
+
+.subscription-text p {
+  color: #fbfaf6;
+}
+
+.subscription-form {
+  display: flex;
+  gap: .5em;
+}
+
+.subscription-form input {
+  height: 40px;
+  width: 271px;
+  border-radius: 1.2em;
+  border: none;
+  padding-left: 15px;
+}
+
+.subscription-form button {
+  height: 40px;
+  padding: 0em 1.5em;
+  border-radius: 100vmax;
+  border: none;
+  color: #fff;
+  background: #3c2313;
+}
+
+@media (max-width: 768px) {
+  header .line-up {
+    display: none;
+  }
+
+  .navigation ul {
+    display: none;
+  }
+
+  .banner img {
+    height: 410px;
+    object-fit: cover;
+    object-position: left;
+  }
+
+  .subscription {
+    flex-direction: column;
+    gap: .5em;
+    align-items: center;
+  }
 }
